# Open_Metaverse_Protocol

./: CMakeLists.txt  README.md
client/: authority_manager.cpp  client_asset_streamer.cpp  client_dead_reckoning.cpp
client/barebones/: CMakeLists.txt  main.cpp
core/: spatial_resolver.cpp
core/libmv/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
core/libmv/include/: libmv_generated.h
core/libmv/src/: identity.rs  lib.rs  network.rs  physics.rs  spatial.rs
proto/: mv_core.proto  mv_handoff.proto  mv_packets.proto
relay/: relay_logic.py
server/: Cargo.toml
server/src/: main.rs
specs/: asset_streaming_pipeline.md  client_engine _feasibility.md  client_engine_spec_v1.md  distributed_index_spec_v1.md  handoff_protocol_spec_v1.md  metaverse_protocol_v1.md  parallel_development.md  relay_node_spec_v1.md
