[package]
name = "libmv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
bytes = "1"
thiserror = "1.0"
lazy_static = "1.4"

[build-dependencies]
cbindgen = "0.26"